[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Default Sprite Top-Down Shooter/Bullet/Bullet.png" type="Texture" id=1]
[ext_resource path="res://bullets/bullet.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sound/Sound Effects/Laser.wav" type="AudioStream" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 34.5459, 31.0239 )

[node name="Bullet" type="Area2D"]
collision_layer = 32
collision_mask = 12
script = ExtResource( 2 )

[node name="BulletSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.13461, 0.13461 )
frames = SubResource( 1 )

[node name="BulletCollision2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.159103, 0.840897 )
shape = SubResource( 2 )

[node name="BulletVisibility2D" type="VisibilityNotifier2D" parent="."]

[node name="Shoot_Sound_Effect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="screen_exited" from="BulletVisibility2D" to="." method="_on_BulletVisibility2D_screen_exited"]
